Login activity finished.

--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="fab_margin">200dp</dimen>
     <dimen name="loginLogoWidth">200dp</dimen>
     <dimen name="loginLogoHeight">200dp</dimen>
     <dimen name="LoginButtonHeight">60dp</dimen>
