--- a/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">48dp</dimen>
+    <dimen name="loginLogoWidth">200dp</dimen>
+    <dimen name="loginLogoHeight">200dp</dimen>
+    <dimen name="LoginButtonHeight">60dp</dimen>
 </resources>
