--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="loginLogoWidth">200dp</dimen>
+    <dimen name="loginLogoHeight">200dp</dimen>
+    <dimen name="LoginButtonHeight">60dp</dimen>
 </resources>
