--- a/app/src/main/res/layout/card_design.xml
+++ b/app/src/main/res/layout/card_design.xml
@@ -7,29 +7,50 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/rowCardView"
+        android:id="@+id/rowCardViewMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/material_dynamic_neutral99">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:tag="reveal-right"
+        <RelativeLayout
+            android:background="#5DADE2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:tag="reveal-right">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:contentDescription="@string/update"
+                app:srcCompat="@drawable/ic_baseline_update_24" />
+        </RelativeLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:tag="reveal-left"
+        <RelativeLayout
+            android:background="#E74C3C"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:tag="reveal-left">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp"
+                android:contentDescription="@string/delete"
+                app:srcCompat="@drawable/ic_baseline_delete_24" />
+        </RelativeLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:tag="front"
+        <RelativeLayout
+            android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:tag="front">
 
             <TextView
                 android:id="@+id/textViewTitle"
@@ -38,12 +59,8 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="24dp"
-                android:text="TextView"
                 android:textColor="#F44336"
-                android:textStyle="bold|italic"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/textViewStatus"
@@ -52,13 +69,10 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="24dp"
-                android:text="TextView"
+                android:layout_alignParentRight="true"
                 android:textAllCaps="false"
-                android:textColor="#0091EA"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:textColor="#000000" />
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
