--- a/app/src/main/res/layout/main_card_design.xml
+++ b/app/src/main/res/layout/main_card_design.xml
@@ -13,8 +13,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            android:tag="front">
+            android:tag="front"
+            android:background="?attr/customMainCardBgColor">
 
             <TextView
                 android:id="@+id/lblTitle"
