--- a/app/src/main/res/layout/custom_spinner_adapter.xml
+++ b/app/src/main/res/layout/custom_spinner_adapter.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_marginLeft="20dp"
-        android:textColor="@color/black"
+        android:textColor="?attr/customTextViewTextColor"
         android:textSize="16sp"
         android:layout_gravity="center_vertical"/>
 </LinearLayout>
