--- a/app/src/main/res/layout/file_card_design.xml
+++ b/app/src/main/res/layout/file_card_design.xml
@@ -47,9 +47,10 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/RelativeLayout_Files"
             android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:background="@color/white"
+            android:background="?attr/customRelativeLayoutBgColor"
             android:tag="front">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -84,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:textAllCaps="false"
-                    android:textColor="#000000"
+                    android:textColor="?attr/customTextViewTextColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
