--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,21 @@
     <!-- Base application theme. -->
     <style name="Theme.NewsApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/DarkTheme_primary</item>
+        <item name="colorPrimaryVariant">@color/DarkTheme_primary_dark</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/DarkTheme_primary</item>
+        <item name="colorSecondaryVariant">@color/DarkTheme_primary_dark</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="customRelativeLayoutBgColor">@color/black</item>
+        <item name="customTextViewTextColor">@color/white</item>
+        <item name="customMainCardBgColor">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 </resources>
